# PhySPP-repo

./: .gitignore  CMakeLists.txt  PhySPP.h  README.md
api/: presets.h  scenario_manager.h  simulation.h
core/: constants.h  vec3.h
examples/: advanced_blackhole.cpp  advanced_engine_demo.cpp  asteroid_belt.cpp  binary_star_system.cpp  blackhole_accretion.cpp  blackhole_example.cpp  bouncing_ball.cpp  collision_camera_tracking.cpp  collision_demo.cpp  collision_physics_demo.cpp  custom_physics.cpp  deterministic_physics_demo.cpp  earth_3d_model.cpp  four_particle_collision.cpp  full_demo.cpp  galaxy_collision.cpp  milky_way.cpp  moon_orbit.cpp  neutron_collision.cpp  nuclear_physics_demo.cpp  performance_test.cpp  planet_collision.cpp  realistic_solar_system.cpp  simple_example.cpp  solar_system_complete.cpp  stellar_fusion.cpp  supernova_explosion.cpp
graphics/: blackhole_visualizer.h  effects.h  particles.h  renderer.h  spaghettification.h  vector_visualizer.h
physics/: accretion_disk.h  advanced_accretion_disk.h  advanced_blackhole.h  advanced_visualization.h  body.h  conservation_laws.h  data_analyzer.h  deterministic_engine.h  electromagnetic_forces.h  engine.h  forces.h  integrators.h  jet.h  kerr_metric.h  magnetic_field.h  mhd.h  octree.h  particle_interactions.h  physics_body.h  physics_forces.h  plasma_thermodynamics.h  radiation.h  radiative_transfer.h  relativity.h  thermodynamics.h
